--- a/rpm/libqofono.yaml
+++ b/rpm/libqofono.yaml
@@ -43,3 +43,4 @@ SubPackages:
       Files:
           - "/opt/ofonotest/bin/ofonotest"
           - "/opt/ofonotest/qml/ofonotest/*.qml"
+          - "%{_libdir}/%{name}/tests/tst_qofonotest"
